day3 (2026-06-17)
Microsoft Windows [Version 10.0.26200.8037]
(c) Microsoft Corporation. All rights reserved.

C:\Users\dcsuser>cd ./csc209s3

C:\Users\dcsuser\csc209s3>python --version
Python 3.12.5

C:\Users\dcsuser\csc209s3>-m venv my_env
'-m' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\dcsuser\csc209s3>python -m venv my_env

C:\Users\dcsuser\csc209s3>my_env\Scripts\activate

(my_env) C:\Users\dcsuser\csc209s3>python
Python 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import math
>>> import numpy as np
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'numpy'
>>> pip install numpy
  File "<stdin>", line 1
    pip install numpy
        ^^^^^^^
SyntaxError: invalid syntax
>>> exit()

(my_env) C:\Users\dcsuser\csc209s3>import numpy
'import' is not recognized as an internal or external command,
operable program or batch file.

(my_env) C:\Users\dcsuser\csc209s3>pip install numpy
Collecting numpy
  Downloading numpy-2.4.6-cp312-cp312-win_amd64.whl.metadata (6.6 kB)
Downloading numpy-2.4.6-cp312-cp312-win_amd64.whl (12.3 MB)
   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 12.3/12.3 MB 856.6 kB/s eta 0:00:00
Installing collected packages: numpy
Successfully installed numpy-2.4.6

[notice] A new release of pip is available: 24.2 -> 26.1.2
[notice] To update, run: python.exe -m pip install --upgrade pip

(my_env) C:\Users\dcsuser\csc209s3>python
Python 3.12.5 (tags/v3.12.5:ff3bc82, Aug  6 2024, 20:45:27) [MSC v.1940 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import numpy as np
>>> range(0,21,2)
range(0, 21, 2)
>>> list(range(0,21,2))
[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]
>>> s = "Programming"
>>> s[0:5]
'Progr'
>>> s[-1:-6]
''
>>> s[-1:-6:-1]
'gnimm'
>>> cls
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'cls' is not defined
>>> os.system()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'os' is not defined. Did you mean: 's'? Or did you forget to import 'os'?
>>> os.systam()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'os' is not defined. Did you mean: 's'? Or did you forget to import 'os'?
>>> os.system('cls')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'os' is not defined. Did you mean: 's'? Or did you forget to import 'os'?
>>> name="John"
>>> name.upper()
'JOHN'
>>> name.lower()
'john'
>>> name="     John    "
>>> name.strip()
'John'
>>> name = "John"
>>> id(name)
1747020774256
>>> name = name + "Peter"
>>> name
'JohnPeter'
>>> id(name)
1747017930992
>>> arr = [1,2,3]
>>> id(arr)
1747020870144
>>> arr.append(4)
>>> list(arr)
[1, 2, 3, 4]
>>> id(arr)
1747020870144
>>> name = "John"
>>> name[2] = "s"
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'str' object does not support item assignment
>>> arr = [1,2,3]
>>> arr[3] = 4
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list assignment index out of range
>>> arr[2] = 4
>>> arr
[1, 2, 4]
>>> a = [1,2,3]
>>> b = a
>>> b.append(4)
>>> b
[1, 2, 3, 4]
>>> id(a)
1747020870144
>>> id(b)
1747020870144
>>> a = [1,2,3]
>>> b = a.copy()
>>> b.append(4)
>>> a
[1, 2, 3]
>>> b
[1, 2, 3, 4]
>>> id(a)
1747695360128
>>> id(b)
1747022354048
>>> a = [1,2,3]
>>> arr = [1,2,3]
>>> arr.append(4)
>>> arr
[1, 2, 3, 4]
>>> arr.insert(2,5)
>>> arr
[1, 2, 5, 3, 4]
>>> id(arr)
1747695360128
>>> id(arr.insert(2,5))
140705321964112
>>> arr.pop()
4
>>> arr
[1, 2, 5, 5, 3]
>>> arr = [1,2,5,3]
>>> r = arr.pop()
>>> r
3
>>> arr
[1, 2, 5]
>>> arr.pop()
5
>>> arr.pop()
2
>>> arr.pop()
1
>>> arr.pop()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: pop from empty list
>>> arr.push()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'push'
>>> arr = [1,2,3]
>>> arr.remove(2)
>>> arr
[1, 3]
>>> arr = [1,2,3,2,6]
>>> arr.remove(2)
>>> arr
[1, 3, 2, 6]
>>> a = {1,2,3,4}
>>> b = {4,5,6,7}
>>> a&b
{4}
>>> a|b
{1, 2, 3, 4, 5, 6, 7}
>>> b - a
{5, 6, 7}
>>> a - b
{1, 2, 3}
>>> cars = {"Audi","BMW","Honda"}
>>> bike = {"BMW","Honda","Hero Honda"}
>>> cars|bike
{'Audi', 'Honda', 'BMW', 'Hero Honda'}
>>> cars&bike
{'BMW', 'Honda'}
>>> cars-bike
{'Audi'}
>>> bike-cars
{'Hero Honda'}
>>> s1 = (8,7,6,5,4,1)
>>> s1
(8, 7, 6, 5, 4, 1)
>>> s1 = s1 + (6)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate tuple (not "int") to tuple
>>> s1 = s1 + (6,)
>>> s1
(8, 7, 6, 5, 4, 1, 6)
>>> id(s1)
1747017398976
>>> s1 = s1 + (9,)
>>> s1
(8, 7, 6, 5, 4, 1, 6, 9)
>>> id(s1)
1747017502832
>>> a = {1,2,3,4}
>>> b = {4,5,6,7}
>>> a = a +{5}
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'set' and 'set'
>>> a = a +{5,}
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'set' and 'set'
>>> a.insert(5)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'set' object has no attribute 'insert'
>>> s1 = {1,2,3}
>>> id(s1)
1747021493888
>>> s1.add(4)
>>> id(s1)
1747021493888
>>> s1.add("A")
>>> s1
{1, 2, 3, 4, 'A'}
>>> [1,2,[3,4],5]
[1, 2, [3, 4], 5]
>>> s1 = {1,2,3}
>>> s1.remove(2)
>>> s1
{1, 3}
>>> s1.discard(2)
>>> s1
{1, 3}
>>> s1.discard(3)
>>> s1
{1}
>>> s1 = (8,7,6,5,4,1)
>>> s1.add(7)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'tuple' object has no attribute 'add'
>>> john = {"name":"john","age":18}
>>> john
{'name': 'john', 'age': 18}
>>> john["name"]
'john'
>>>
